# wordle-collab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml
accounts/: models.py
accounts/api/: urls.py
core/: settings.py  urls.py
core/api/: urls.py
game/: admin.py  models.py
game/api/: serializers.py  urls.py  views.py
game/migrations/: 0001_initial.py
scripts/: entrypoint.sh
tests/: test_game_app.py
wordle-collab/accounts/: admin.py  models.py
wordle-collab/accounts/api/: serializers.py  views.py
wordle-collab/accounts/migrations/: 0001_initial.py  0002_customuser_groups_customuser_user_permissions.py
wordle-collab/core/: asgi.py  settings.py  urls.py
wordle-collab/core/api/: urls.py
wordle-collab/game/: consumers.py  models.py  routing.py  urls.py  views.py  wordle.py
wordle-collab/game/api/: serializers.py  urls.py  views.py
wordle-collab/game/migrations/: 0001_initial.py  0002_attempt_player_game_attempt_game.py  0003_rename_max_atempts_game_max_attempts.py  0004_game_status.py  0005_alter_game_status.py  0006_attempt_hint.py  0007_game_turn.py
wordle-collab/wordle/: wordle.py  words_list.json
